--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ end
       <div class="text__content common-content common-content--size-large">
         <p>Learn more about <a href="https://hotwired.dev">Hotwire</a>, the default front-end framework for Rails.</p>
 
-        <p><strong>Stay up to date</strong> with Rails on <a href="https://twitter.com/rails" class="icon icon--twitter">Twitter</a>, <a href="https://www.youtube.com/@railsofficial" class="icon icon--youtube">YouTube</a>, and <a href="https://world.hey.com/this.week.in.rails" class="icon icon--world">This Week in Rails</a>.</p>
+        <p><strong>Stay up to date</strong> with Rails on <a href="https://x.com/rails" class="icon icon--x">x ( twitter )</a>, <a href="https://www.youtube.com/@railsofficial" class="icon icon--youtube">YouTube</a>, and <a href="https://world.hey.com/this.week.in.rails" class="icon icon--world">This Week in Rails</a>.</p>
       </div>
     </div>
   </div>
